--- a/client/src/index.html
+++ b/client/src/index.html
@@ -29,8 +29,8 @@
     </header>
 
     <div class="contaner">
-      <div class="cell cross"></div>
-      <div class="cell zero"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
       <div class="cell"></div>
       <div class="cell"></div>
       <div class="cell"></div>
